# db/schema.rb
@@ -10,9 +10,22 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2023_09_26_204556) do
+ActiveRecord::Schema[7.0].define(version: 2023_11_08_070228) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
+
+  create_table "chores", force: :cascade do |t|
+    t.string "name"
+    t.text "description"
+    t.bigint "manager_id", null: false
+    t.bigint "executor_id", null: false
+    t.bigint "team_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["executor_id"], name: "index_chores_on_executor_id"
+    t.index ["manager_id"], name: "index_chores_on_manager_id"
+    t.index ["team_id"], name: "index_chores_on_team_id"
+  end
 
   create_table "jwt_denylist", force: :cascade do |t|
     t.string "jti", null: false
@@ -56,6 +69,9 @@ ActiveRecord::Schema[7.0].define(version: 2023_09_26_204556) do
     t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
   end
 
+  add_foreign_key "chores", "teams"
+  add_foreign_key "chores", "users", column: "executor_id"
+  add_foreign_key "chores", "users", column: "manager_id"
   add_foreign_key "user_team_executed", "teams"
   add_foreign_key "user_team_executed", "users"
   add_foreign_key "user_team_managed", "teams"
