# swagger/v1/swagger.yaml
@@ -4,6 +4,407 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/chores":
+    post:
+      summary: Create a chore
+      tags:
+      - Chores
+      security:
+      - bearer_auth: []
+      parameters: []
+      responses:
+        '201':
+          description: correct request
+          content:
+            application/json:
+              examples:
+                chore:
+                  value:
+                    id: 2
+                    name: Chorify
+                    description: Some amazing chore
+                    created_at: '2023-11-09T17:43:13.791Z'
+                    updated_at: '2023-11-09T17:43:13.791Z'
+                    manager:
+                      id: 32
+                      email: email@example.com
+                    executor:
+                      id: 3
+                      email: corrie.stoltenberg@marquardt.example
+                    team:
+                      id: 12
+                      name: Team name
+              schema:
+                type: object
+                properties:
+                  chore:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      name:
+                        type: string
+                      description:
+                        type: string
+                      created_at:
+                        type: datetime
+                      updated_at:
+                        type: datetime
+                      manager:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          email:
+                            type: string
+                      executor:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          email:
+                            type: string
+                      team:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          name:
+                            type: string
+        '422':
+          description: invalid request
+          content:
+            application/json:
+              examples:
+                chore:
+                  value:
+                    name:
+                    - can't be blank
+                    - is too short (minimum is 2 characters)
+                    description:
+                    - is too short (minimum is 3 characters)
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: array
+                    properties:
+                      type: string
+                  description:
+                    type: array
+                    properties:
+                      type: string
+                  executor_id:
+                    type: array
+                    properties:
+                      type: string
+                  team_id:
+                    type: array
+                    properties:
+                      type: string
+        '403':
+          description: unauthorized request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                chore:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                      default: Chore name
+                    description:
+                      type: string
+                      default: Description
+                    team_id:
+                      type: integer
+                      default: 12
+                    executor_id:
+                      type: integer
+                      default: 3
+                  required:
+                  - name
+                  - description
+                  - executor_id
+                  - team_id
+    get:
+      summary: Return a list of chores
+      tags:
+      - Chores
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: team_ids
+        in: query
+        items:
+          type: integer
+        required: false
+        schema:
+          type: array
+      responses:
+        '200':
+          description: correct request
+          content:
+            application/json:
+              examples:
+                chores:
+                  value:
+                  - id: 2
+                    name: Chorify
+                    description: Some amazing chore
+                    manager_id: 32
+                    executor_id: 3
+                    team_id: 12
+                    created_at: '2023-11-09T17:43:13.791Z'
+                    updated_at: '2023-11-09T17:43:13.791Z'
+              schema:
+                type: array
+                properties:
+                - type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    manager_id:
+                      type: integer
+                    executor_id:
+                      type: integer
+                    team_id:
+                      type: integer
+                    created_at:
+                      type: datetime
+                    updated_at:
+                      type: datetime
+  "/api/v1/chores/{id}":
+    get:
+      summary: Return a chore
+      tags:
+      - Chores
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      responses:
+        '200':
+          description: correct request
+          content:
+            application/json:
+              examples:
+                chore:
+                  value:
+                    id: 2
+                    name: Chorify
+                    description: Some amazing chore
+                    created_at: '2023-11-09T17:43:13.791Z'
+                    updated_at: '2023-11-09T17:43:13.791Z'
+                    manager:
+                      id: 32
+                      email: email@example.com
+                    executor:
+                      id: 3
+                      email: corrie.stoltenberg@marquardt.example
+                    team:
+                      id: 12
+                      name: Team name
+              schema:
+                type: object
+                properties:
+                  chore:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      name:
+                        type: string
+                      description:
+                        type: string
+                      created_at:
+                        type: datetime
+                      updated_at:
+                        type: datetime
+                      manager:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          email:
+                            type: string
+                      executor:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          email:
+                            type: string
+                      team:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          name:
+                            type: string
+        '401':
+          description: unauthorized request
+    patch:
+      summary: Update a chore
+      tags:
+      - Chores
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      responses:
+        '200':
+          description: correct request
+          content:
+            application/json:
+              examples:
+                chore:
+                  value:
+                    id: 2
+                    name: Chorify
+                    description: Some amazing chore
+                    created_at: '2023-11-09T17:43:13.791Z'
+                    updated_at: '2023-11-09T17:43:13.791Z'
+                    manager:
+                      id: 32
+                      email: email@example.com
+                    executor:
+                      id: 3
+                      email: corrie.stoltenberg@marquardt.example
+                    team:
+                      id: 12
+                      name: Team name
+              schema:
+                type: object
+                properties:
+                  chore:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      name:
+                        type: string
+                      description:
+                        type: string
+                      created_at:
+                        type: datetime
+                      updated_at:
+                        type: datetime
+                      manager:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          email:
+                            type: string
+                      executor:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          email:
+                            type: string
+                      team:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          name:
+                            type: string
+        '403':
+          description: forbidden request
+        '422':
+          description: incorrect request
+          content:
+            application/json:
+              examples:
+                chore:
+                  value:
+                    name:
+                    - can't be blank
+                    - is too short (minimum is 2 characters)
+                    description:
+                    - is too short (minimum is 3 characters)
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: array
+                    properties:
+                      type: string
+                  description:
+                    type: array
+                    properties:
+                      type: string
+                  executor_id:
+                    type: array
+                    properties:
+                      type: string
+                  manager_id:
+                    type: array
+                    properties:
+                      type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                chore:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                      default: Chore name
+                    description:
+                      type: string
+                      default: Description
+                    manager_id:
+                      type: integer
+                      default: 32
+                    executor_id:
+                      type: integer
+                      default: 3
+                  required:
+                  - name
+                  - description
+                  - executor_id
+                  - manager_id
+    delete:
+      summary: Delete a chore
+      tags:
+      - Chores
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+          default: 12
+        required: true
+      responses:
+        '204':
+          description: chore belonging to manager
+        '403':
+          description: chore not belonging to manager
   "/api/v1/teams":
     post:
       summary: Create a team
